<resources>
    <string name="app_name">Parking</string>
    <string name="enter_text">Войти</string>
    <string name="logo_description">Logo</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="login_error">Неправильный пароль или логин</string>
    <string name="settings">Настройки</string>
    <string name="locations">Места</string>
    <string name="parking">Аренда</string>
    <string name="parking_place">Парковочное место №%1$d</string>
    <string name="booking">Бронировать</string>
    <string name="booking_name">Занял %1$s</string>
    <string name="booking_date">%1$s - %2$s</string>
    <string name="show_only_free">Показывать только свободные</string>
    <string name="date">Дата</string>
    <string name="start_date">Начало:</string>
    <string name="time">Время</string>
    <string name="end_date">Конец:</string>
    <string name="driver_id">Водитель</string>
    <string name="car_id">Автомобиль</string>
    <string name="start_reservation">Бронирование</string>
    <string name="end_reservation">Освобождение</string>
    <string name="booking_complete">Забронировать</string>
    <string name="people">Люди</string>
    <string name="cars">Машины</string>
    <string name="spot_id">ID места</string>
    <string name="spot_number">Номер парковочного места</string>
    <string name="create">Создать</string>
    <string name="created">Создано</string>
    <string name="model">Модель:</string>
    <string name="length">Длина:</string>
    <string name="weight">Вес:</string>
    <string name="weight_value">%1$dф</string>
    <string name="length_value">%1$dд</string>
    <string name="car_number">Номер</string>
    <string name="model2">Модель</string>
    <string name="length2">Длина</string>
    <string name="weight2">Вес</string>
    <string name="name">Имя</string>
    <string name="not_all_fields_filled">Не все поля заполнены</string>
</resources>