<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_yellow"
    tools:context=".ui.user.reservation.filter.ReservationsFilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <!--        Driver id-->
        <TextView
            android:id="@+id/driverIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/driver_id"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/driverIdTextInputLayout"
            style="@style/CustomTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:hint=""

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverIdTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/driverIdTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_black"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Car id-->
        <TextView
            android:id="@+id/carIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/car_id"
            android:textColor="@color/text_black"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverIdTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/carIdTextInputLayout"
            style="@style/CustomTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:hint=""

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carIdTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/carIdTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_black"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--            StartDateInput-->
        <TextView
            android:id="@+id/startTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/start_reservation"
            android:textColor="@color/text_color_selector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carIdTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startTextDate"
            style="@style/CustomTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:hint="@string/date"

            app:layout_constraintEnd_toStartOf="@+id/startTextTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startDateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColorHint="@color/text_black"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startTextTime"
            style="@style/CustomTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/startTextDate"
            app:layout_constraintTop_toBottomOf="@+id/startTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startTimeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_black"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--            EndDateInput-->
        <TextView
            android:id="@+id/endTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/end_reservation"
            android:textColor="@color/text_color_selector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startTextDate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/endTextDate"
            style="@style/CustomTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:hint="@string/date"

            app:layout_constraintEnd_toStartOf="@+id/endTextTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/endDateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColorHint="@color/text_black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/endTextTime"
            style="@style/CustomTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/endTextDate"
            app:layout_constraintTop_toBottomOf="@+id/endTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/endTimeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_yellow"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="71dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/app_yellow"
        android:contentDescription="@string/app_name"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/bookingButton"
        style="@style/CustomButton"
        android:layout_marginBottom="40dp"
        android:text="@string/booking_complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/app_white"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parking_place"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>