<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="18dp"
        android:paddingBottom="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/item_shape">

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:text="@string/spot_number"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        Model-->
        <TextView
            android:id="@+id/model"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:text="@string/model"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number" />
        <TextView
            android:id="@+id/modelValue"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:text="@string/model"
            android:textColor="@color/text_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number" />

        <!--        Length-->
        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:textColor="@color/text_black"
            android:text="@string/length"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/model" />
        <TextView
            android:id="@+id/lengthValue"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginEnd="12dp"
            android:textColor="@color/text_black"
            android:gravity="center"
            android:text="@string/length"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/model" />

        <!--        Weight-->
        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:text="@string/weight"
            android:textColor="@color/text_black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/length" />
        <TextView
            android:id="@+id/weightValue"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:textColor="@color/text_black"
            android:text="@string/weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/length" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>