<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_yellow"
    tools:context=".ui.user.reservation.filter.ReservationsFilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.0">

        <CheckBox
            android:id="@+id/onlyFreeCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/show_only_free"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/onlyFreeLayout"
            android:layout_width="330dp"
            android:layout_height="620dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onlyFreeCheckBox">

<!--            StartDateInput-->
            <TextView
                android:id="@+id/startTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/start_date"
                android:textColor="@color/text_color_selector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startTextDate"
                style="@style/CustomTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:hint="@string/date"

                app:layout_constraintEnd_toStartOf="@+id/startTextTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:textColorHint="@color/text_black"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startTextTime"
                style="@style/CustomTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/startTextDate"
                app:layout_constraintTop_toBottomOf="@+id/startTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text_black"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            EndDateInput-->
            <TextView
                android:id="@+id/endTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/end_date"
                android:textColor="@color/text_color_selector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/startTextDate" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endTextDate"
                style="@style/CustomTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:hint="@string/date"

                app:layout_constraintEnd_toStartOf="@+id/endTextTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/endTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text_black"
                    android:inputType="date"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endTextTime"
                style="@style/CustomTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/endTextDate"
                app:layout_constraintTop_toBottomOf="@+id/endTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text_black"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_yellow"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="71dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/app_yellow"
        android:contentDescription="@string/app_name"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>