<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_yellow"
    tools:context=".ui.user.reservation.filter.ReservationsFilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <!--        Number-->
        <TextView
            android:id="@+id/numberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/car_number"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numberTextInputLayout"
            style="@style/CustomTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:hint=""

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numberTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@color/text_black"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Model-->
        <TextView
            android:id="@+id/modelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/model2"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/modelTextInputLayout"
            style="@style/CustomTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:hint=""

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/modelTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@color/text_black"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Length-->
        <TextView
            android:id="@+id/lengthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/length2"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lengthTextInputLayout"
            style="@style/CustomTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:hint=""

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lengthTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lengthTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="@color/text_black"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Weight-->
        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/weight2"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lengthTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weightTextInputLayout"
            style="@style/CustomTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:hint=""

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weightTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="@color/text_black"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_yellow"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="71dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/app_yellow"
        android:contentDescription="@string/app_name"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/createButton"
        style="@style/CustomButton"
        android:layout_marginBottom="40dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/app_white"/>

</androidx.constraintlayout.widget.ConstraintLayout>